adc componentes e props

--- a/Frontend - react/AulaReact/aula-filmes/src/components/header/style.css
+++ b/Frontend - react/AulaReact/aula-filmes/src/components/header/style.css
@@ -4,28 +4,32 @@
 }
 
 .menu {
-    background: #9BD2DE;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 3em;
     width: 100%;
+}
+
+.barra {
+    background: #9BD2DE;
 }
 
 .menu ul {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
     list-style: none;
     font-size: 1em;
 }
 
-.menu a {
+.link {
     text-decoration: none;
     font-weight: bold;
     color: #000000;
     margin: 0 1em 0 1em;
 }
 
-.menu a:hover {
+.link:hover {
     text-decoration: underline;
     color: #000000;
 }
