--- a/Frontend - react/AulaReact/aula-filmes/src/assets/styles/global.css
+++ b/Frontend - react/AulaReact/aula-filmes/src/assets/styles/global.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 img {
     max-width: 100%;
+}
+
+.centro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
