--- a/Frontend - react/AulaReact/aula-filmes/src/components/button/style.css
+++ b/Frontend - react/AulaReact/aula-filmes/src/components/button/style.css
@@ -1,6 +1,6 @@
 .btn-enviar {
     display: block;
-    width: 15vh;
+    width: 8em;
     padding: 1em;
     margin-left: auto;
     margin-right: auto;
