--- a/Frontend - react/AulaReact/aula-filmes/src/pages/generos/style.css
+++ b/Frontend - react/AulaReact/aula-filmes/src/pages/generos/style.css
@@ -2,3 +2,26 @@
     display: flex;
     justify-content: center;
 }
+
+.icon {
+    width: 2.5em;
+}
+
+.icon:hover {
+    cursor: pointer;
+}
+
+.thead-cor{
+    background: #F6511D;
+    color: #ffffff;
+}
+
+form {
+    display: flex;
+    justify-content: space-around;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+}
